# apify-rust-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: run_actor.rs
src/: lib.rs
tests/: integration.rs
